--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ Grid System 1 Style
 }
 #h4{
     font-family: Almarai;
-    transform: rotate(270deg;)
+    transform: rotate(270deg);
     position: fixed;
     letter-spacing: 2px;
     font-size: 24px;
