--- a/style.css
+++ b/style.css
@@ -625,8 +625,11 @@ position: absolute;
                     0% {
                       stroke-dasharray: 2500;
                         stroke-dashoffset: 2500;
-                    }
-                      25% {
+                    }15% {
+                        stroke-dasharray: 2500;
+                          stroke-dashoffset: 2500;
+                      }
+                      40% {
                         stroke-dashoffset: 5000;
                       }
                       100% {
@@ -647,7 +650,11 @@ position: absolute;
                         stroke-dasharray: 2500;
                       stroke-dashoffset: 2500;
                     }
-                      25% {
+                    25% {
+                        stroke-dasharray: 2500;
+                      stroke-dashoffset: 2500;
+                    }
+                      50% {
                         stroke-dasharray: 2500;
                         stroke-dashoffset: 5000;
                       }
