--- a/style.css
+++ b/style.css
@@ -1065,6 +1065,25 @@ Screen Sizes
                             margin-top: 160px;
 
                                     }
+                                    .pMain {
+                                        opacity: 1;
+                                        stroke-dasharray: 4000;
+                                        animation: maindash 10s ease-out infinite;
+        
+                                      }
+        
+                                      .pSecond {  
+                                        opacity: 1;
+                                        animation: secdash 10s linear infinite;
+        
+                                      }
+        
+                                      .pThird {
+                                        opacity: 1;
+                                        stroke-dasharray: 2500;
+                                        animation: thirddash 10s linear infinite;
+        
+                                      }
                         }
 
                         @media (max-width: 480px) {
@@ -1140,22 +1159,7 @@ Screen Sizes
                                     }
                             }
 
-                            .pMain {
-                                opacity: 1;
-                                stroke-dasharray: 4000;
-                                animation: maindash 10s ease-out ;
-                              }
 
-                              .pSecond {  
-                                opacity: 1;
-                                animation: secdash 10s linear ;
-                              }
-
-                              .pThird {
-                                opacity: 1;
-                                stroke-dasharray: 2500;
-                                animation: thirddash 10s linear ;
-                              }
                               
                               
                             @media (max-width: 380px) {
