--- a/style.css
+++ b/style.css
@@ -215,10 +215,17 @@ Grid System 1 Style
             transform-origin: center;
             
         }
-        .gridsystem1 #circle:focus, :active{
+        .gridsystem1 #circle:focus{
             filter: invert(2%) sepia(1%) saturate(278%) hue-rotate(6deg) brightness(104%) contrast(97%);
             animation: oraymove 3s  linear infinite;
-            transform-origin: center;  
+            transform-origin: center;
+            
+        }
+        .gridsystem1 #circle:active{
+            filter: invert(2%) sepia(1%) saturate(278%) hue-rotate(6deg) brightness(104%) contrast(97%);
+            animation: oraymove 3s ease-in-out ;
+            transform-origin: center;
+            
         }
 
         #outsideray{
@@ -374,6 +381,7 @@ position: absolute;
         }
         @keyframes orbanim{
            0% { transform: rotate(0deg); }
+          50% { transform: rotate(180deg); }
           100% { transform: rotate(360deg); }
             }
             
@@ -760,7 +768,7 @@ position: absolute;
             margin-top: 0px; 
             z-index: 3000;
           }
-        #window:hover, :active, :focus{
+        #window:hover{
             filter:  saturate(80%) hue-rotate(10deg) brightness(134%) contrast(77%);
         }
 
@@ -800,28 +808,39 @@ position: absolute;
 
          #Train{
              animation: Trainmove 25s  linear infinite;
+             float: left;
+            width: 550px;
     
             }   
             @keyframes Trainmove {
+        
                 0% 
                 {
                     transform: translateX(200%);
+                    opacity: 100%;
                 }
                 100% {
                     transform: translateX(-100%);
+                    opacity: 100%;
                 }
             }
 
         #Car{
             animation: Carmove 30s linear infinite;
+                position: relative;
+                width: 422px;
+                
                 } 
                 @keyframes Carmove {
+        
                     0% 
                     {
                         transform: translateX(-50%);
+                        opacity: 100%;
                     }
                     100% {
                         transform: translateX(100%);
+                        opacity: 100%;
                     }
                 }
 /* =================
