--- a/style.css
+++ b/style.css
@@ -668,12 +668,13 @@ position: absolute;
                         stroke-dasharray: 2500;
                           stroke-dashoffset: 2500;
                       }
-                      40% {
+                      50% {
                         stroke-dashoffset: 5000;
                       }
                       100% {
                         stroke-dashoffset: 5000;
                       }
+  
                   }
                   .pThird {
                     opacity: 0;
@@ -693,7 +694,7 @@ position: absolute;
                         stroke-dasharray: 2500;
                       stroke-dashoffset: 2500;
                     }
-                      50% {
+                      60% {
                         stroke-dasharray: 2500;
                         stroke-dashoffset: 5000;
                       }
@@ -701,6 +702,7 @@ position: absolute;
                         stroke-dasharray: 2500;
                         stroke-dashoffset: 5000;
                       }
+
                   }
 
                   #starsys1{
@@ -1077,23 +1079,29 @@ Screen Sizes
                             margin-top: 160px;
 
                                     }
+                                    #Car{
+                                        -webkit-animation: Carmove 30s linear infinite;
+                                            } 
+                                    #Train{
+                                        -webkit-animation: Trainmove 25s  linear infinite;
+                                       }   
                                     .pMain {
                                         opacity: 1;
                                         stroke-dasharray: 4000;
-                                        animation: maindash 10s ease-out infinite;
+                                        -webkit-animation: maindash 10s ease-out infinite;
         
                                       }
         
                                       .pSecond {  
                                         opacity: 1;
-                                        animation: secdash 10s linear infinite;
+                                        -webkit-animation: secdash 10s ease-in infinite;
         
                                       }
         
                                       .pThird {
                                         opacity: 1;
                                         stroke-dasharray: 2500;
-                                        animation: thirddash 10s linear infinite;
+                                        -webkit-animation: thirddash 10s ease-in infinite;
         
                                       }
                         }
