--- a/style.css
+++ b/style.css
@@ -1002,35 +1002,35 @@ Screen Sizes
                         z-index: 3010;
                         }
                         #Car{
-                            -webkit-animation: Carmove 30s linear infinite;
+                            animation: Carmove 30s linear infinite;
                                 } 
                         #Train{
-                            -webkit-animation: Trainmove 25s  linear infinite;
+                            animation: Trainmove 25s  linear infinite;
                            }   
                         .pMain {
                             opacity: 1;
                             stroke-dasharray: 4000;
-                            -webkit-animation: maindash 10s ease-out infinite;
+                            animation: maindash 10s ease-out infinite;
 
                           }
 
                           .pSecond {  
                             opacity: 1;
-                            -webkit-animation: secdash 10s ease-in infinite;
+                            animation: secdash 10s ease-in infinite;
 
                           }
 
                           .pThird {
                             opacity: 1;
                             stroke-dasharray: 2500;
-                            -webkit-animation: thirddash 10s ease-in infinite;
+                            animation: thirddash 10s ease-in infinite;
                           }
                     }
 
                     @media (max-width: 800px) {
                         .sidetext {
-                            top: 60%;  
-                            margin-left: 1.1vw;
+                            top: 50%;  
+                            margin-left: 1.3vw;
                         }
                         #TextTitle{
                             font-size: .85rem;
@@ -1109,7 +1109,7 @@ Screen Sizes
                         @media (max-width: 480px) {
                             .sidetext {           
                                 top: 50%;
-                                margin-left: 1vw;
+                                margin-left: 1.1vw;
                             }
                             .smalltext {  
                                 font-size: 12px;
@@ -1185,7 +1185,7 @@ Screen Sizes
                             @media (max-width: 380px) {
                                 .sidetext {           
                                     top: 50%;
-                                    margin-left: 1vw;
+                                    margin-left: 1.1vw;
                                 }
                                 #TextTitle{
                                     font-size: .25rem; 
