--- a/style.css
+++ b/style.css
@@ -816,9 +816,11 @@ position: absolute;
         
                 0% 
                 {
+                    transition: transform;
                     transform: translateX(200%);
                 }
                 100% {
+                    transition: transform;
                     transform: translateX(-100%);
                 }
             }
@@ -826,14 +828,17 @@ position: absolute;
         #Car{
             animation: Carmove 30s linear infinite;
                 position: relative;
+                
                 } 
                 @keyframes Carmove {
         
                     0% 
                     {
+                        transition: transform;
                         transform: translateX(-50%);
                     }
                     100% {
+                        transition: transform;
                         transform: translateX(100%);
                     }
                 }
