--- a/style.css
+++ b/style.css
@@ -1007,28 +1007,34 @@ Screen Sizes
                         z-index: 3010;
                         }
                         #Car{
-                            animation: Carmove 30s linear infinite;
+                            -webkit-animation: Carmove 30s linear infinite;
+                            -moz-animation: Carmove 30s linear infinite;
                                 } 
                         #Train{
-                            animation: Trainmove 25s  linear infinite;
+                            -webkit-animation: Trainmove 25s  linear infinite;
+                            -moz-animation: Trainmove 25s  linear infinite;
                            }   
                         .pMain {
                             opacity: 1;
                             stroke-dasharray: 4000;
-                            animation: maindash 10s ease-out infinite;
+                            -webkit-animation: maindash 10s ease-out infinite;
+                            -moz-animation: maindash 10s ease-out infinite;
+                            
 
                           }
 
                           .pSecond {  
                             opacity: 1;
-                            animation: secdash 10s ease-in infinite;
+                            -webkit-animation: secdash 10s ease-in infinite;
+                            -moz-animation: secdash 10s ease-in infinite;
 
                           }
 
                           .pThird {
                             opacity: 1;
                             stroke-dasharray: 2500;
-                            animation: thirddash 10s ease-in infinite;
+                            -webkit-animation: thirddash 10s ease-in infinite;
+                            -moz-animation: thirddash 10s ease-in infinite;
                           }
                     }
 
