--- a/style.css
+++ b/style.css
@@ -1055,7 +1055,7 @@ Screen Sizes
                             animation: maindash 10s ease-out infinite;
                           }
 
-                          .pSecond {  
+                          .pSecond, .pSecond.active {  
                             opacity: 1;
                             -webkit-animation: secdash 10s ease-in infinite;
                             -moz-animation: secdash 10s ease-in infinite;
@@ -1063,7 +1063,7 @@ Screen Sizes
 
                           }
 
-                          .pThird {
+                          .pThird, .pThird.active {
                             opacity: 1;
                             stroke-dasharray: 2500;
                             -webkit-animation: thirddash 10s ease-in infinite;
