--- a/style.css
+++ b/style.css
@@ -1176,6 +1176,10 @@ Screen Sizes
                             margin-top: 160px;
 
                                     }
+                                    .gridsystem1 #Powerstation{
+                                        margin-right: 60px;
+                                        margin-top: 62vw;
+                                        }
 
                         }
 
